<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="com.example.batere3a.joggingpartner.MakeOrderActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_date_picker"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_date_picker"
            android:onClick="showDatePickerDialog"/>

        <EditText
            android:id="@+id/dateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ic_date_picker"
            android:hint="@string/datePickerHint"
            android:editable="false"
            android:focusable="false"
            android:onClick="showDatePickerDialog"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_time_picker"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_time_picker"
            android:onClick="showTimePickerDialog"/>

        <EditText
            android:id="@+id/timeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ic_time_picker"
            android:hint="@string/timePickerHint"
            android:editable="false"
            android:focusable="false"
            android:onClick="showTimePickerDialog"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_map"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_map"
            android:onClick="showTimePickerDialog"/>

        <EditText
            android:id="@+id/mapText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ic_map"
            android:hint="@string/mapPickerHint"
            android:editable="false"
            android:focusable="false"
            android:onClick="showTimePickerDialog"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_address"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_address"/>

        <EditText
            android:id="@+id/addressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ic_address"
            android:hint="@string/addressHint"
            android:focusable="false"
            android:editable="false"/>
    </RelativeLayout>

    <Button
        android:id="@+id/buttonGoToMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToMapText"/>

    <TextView
        android:id="@+id/latlngText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
